refactor: Update database schema and add dashboard apis
