# packages/shared/src/types/types.ts
@@ -120,6 +120,7 @@ export type Order = {
   discount: number | Decimal | string | any;
   total: number | Decimal | string | any;
   orderStatus: OrderStatusType;
+  transactionId: null | string;
   paymentMethod: PaymentMethodType;
   paymentStatus: PaymentStatusType;
   note: null | string;
@@ -129,11 +130,9 @@ export type Order = {
 
 export type OrderItem = {
   id: number;
-  name: string;
-  color: string;
-  size: string;
+  productId: number;
+  stockId: number;
   price: number | Decimal | string | any;
-  imageUrl: string | null;
   quantity: number;
   createdAt: Date;
   updatedAt: Date;
@@ -146,13 +145,6 @@ export type Shipping = {
   cost: number | Decimal | string | any;
   createdAt: Date;
   updatedAt: Date;
-};
-
-export type Payment = {
-  orderId: number;
-  paymentLink: string | null;
-  transactionId: number | null;
-  transactionOrderId: number | null;
 };
 
 export type Review = {
@@ -177,16 +169,6 @@ export type Address = {
   phone: string;
   firstName: string;
   lastName: string;
-  createdAt: Date;
-  updatedAt: Date;
-};
-
-export type Notification = {
-  id: number;
-  userId: number;
-  title: string;
-  content: string;
-  isRead: boolean;
   createdAt: Date;
   updatedAt: Date;
 };
